--- a/main.css
+++ b/main.css
@@ -2,6 +2,175 @@ body {
     margin: 0;
     padding: 0;
     outline: none;
+    color: #ffffff;
+
+    background-image: url('./img/bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-background-size: cover;
+    background-size: cover;
+
+    font-family: 'PT Sans', sans-serif;
 }
 
+audio {
+    visibility: hidden;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    opacity: 0;
+}
 
+.wrapper {
+    height: 100vh;
+    position: relative;
+}
+
+.wrapper:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .75);
+}
+
+.card {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    height: 450px;
+    background-color: #000000;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .5);
+}
+.card:hover .details {
+    bottom: 0;
+}
+.card:hover .poster:before {
+    bottom: 0;
+}
+.card:hover .poster__img {
+    filter: blur(5px);
+    transform: translateY(-50px);
+}
+
+.poster {
+    position: relative;
+    overflow: hidden;
+}
+.poster:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -180px;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(0deg, #000 50%, transparent);
+    transition: bottom .5s;
+    z-index: 1;
+}
+.poster__img {
+    width: 100%;
+    height: auto;
+    transition: .5s;
+}
+
+.details {
+    position: absolute;
+    padding: 20px;
+    width: 100%;
+    height: 75%;
+    left: 0;
+    bottom: -180px;
+    box-sizing: border-box;
+    transition: .5s;
+    z-index: 2;
+}
+.details__title {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 0;
+    font-size: 20px;
+}
+
+.directed {
+    font-size: 14px;
+    color: #ff9800;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.rating {
+    position: relative;
+    padding: 5px 0;
+    margin-bottom: 15px;
+}
+.rating .fa {
+    color: #f7f406;
+    margin-right: 2px;
+    font-size: 16px;
+}
+.rating__int {
+    padding: 0 5px;
+}
+
+.tags {
+    position: relative;
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+.tags__item {
+    padding: 2px 4px;
+    margin-right: 2px;
+    display: inline-block;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+.tags__item:nth-child(1) {
+    background-color: #7206f7;
+}
+.tags__item:nth-child(2) {
+    background-color: #f70661;
+}
+
+.info {
+}
+.info__description {
+    margin-bottom: 10px;
+}
+
+.star {
+    position: relative;
+}
+.star__title {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 20px;
+    color: #f7f406;
+}
+.star__list {
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+.star__item {
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    background-color: #ffffff;
+    border-radius: 50%;
+    margin-right: 6px;
+    border: 1px solid #ffffff;
+}
+.star__img {
+    width: 100%;
+}
